<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/grey_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idacc"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40"
            app:fontFamily="sans-serif-medium" />

        <EditText
                android:id="@+id/numaccident"
            style="@style/EditText.Flat.Grey"
                android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/edit_text_round_bg_white"
            android:hint="@string/idacc"
            android:minHeight="@dimen/spacing_xmlarge"
            android:text="" />-->



        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateacc"
                android:layout_marginTop="@dimen/spacing_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                app:fontFamily="sans-serif-medium" />


        <EditText
                android:id="@+id/dateacc"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/edit_text_round_bg_white"
                android:hint="@string/idacc"
                android:minHeight="@dimen/spacing_xmlarge"
                android:text="00" />


        <TextView
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heureacc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                app:fontFamily="sans-serif-medium" />

        <EditText
                android:id="@+id/heureacc"
                android:layout_marginTop="@dimen/spacing_middle"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_round_bg_white"
                android:hint="@string/heureacc"
                android:text="1111"
                android:minHeight="@dimen/spacing_xmlarge"/>


        <TextView
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                app:fontFamily="sans-serif-medium" />


        <EditText
                android:id="@+id/place"
                android:layout_marginTop="@dimen/spacing_middle"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_round_bg_white"
                android:hint="Places"
                android:text="Douala rue23"
                android:minHeight="@dimen/spacing_xmlarge"/>

        <TextView
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                app:fontFamily="sans-serif-medium" />


        <!--  style="@style/SpinnerTheme"-->
        <Spinner
                android:id="@+id/cityspinner"

                android:background="@drawable/edit_text_round_spinner_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        <!--<EditText
            android:layout_marginTop="@dimen/spacing_middle"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_round_bg_white"
            android:hint="@string/dateacc"
            android:text="@string/dateacc"
            android:drawableEnd="@drawable/ic_expand_arrow"
            android:drawableRight="@drawable/ic_expand_arrow"
            android:minHeight="@dimen/spacing_xmlarge" />-->


        <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/munacc"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_middle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                app:fontFamily="sans-serif-medium" />

        <Spinner
                android:id="@+id/munispinner"
                android:background="@drawable/edit_text_round_spinner_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        <TextView
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/typeacc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                app:fontFamily="sans-serif-medium" />

        <Spinner
                android:id="@+id/typespinneracc"
                android:background="@drawable/edit_text_round_spinner_white"


                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView

                android:layout_marginTop="@dimen/spacing_middlse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/climaticcondition"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                app:fontFamily="sans-serif-medium" />

        <Spinner
                android:background="@drawable/edit_text_round_spinner_white"
                android:id="@+id/accidentbrightspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/typeimpact"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                app:fontFamily="sans-serif-medium" />


        <Spinner
                android:background="@drawable/edit_text_round_spinner_white"
                android:id="@+id/accidentimpactspinner"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_height="wrap_content" />

        <TextView
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditionluminosite"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                android:layout_marginBottom="@dimen/spacing_medium"
                app:fontFamily="sans-serif-medium" />


        <Spinner
                android:background="@drawable/edit_text_round_spinner_white"


                android:id="@+id/accidentclimaticspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gravitaccident"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                android:layout_marginBottom="@dimen/spacing_medium"
                app:fontFamily="sans-serif-medium" />

        <Spinner
                android:background="@drawable/edit_text_round_spinner_white"
                android:id="@+id/gravityspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_middle"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/spacing_middle"
        android:layout_weight="1">



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_middle"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="@dimen/spacing_middle">




    </LinearLayout>

</LinearLayout>

     <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">





         </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:orientation="horizontal">




            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />



        </LinearLayout>
        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="4dp" />





    </LinearLayout>

</androidx.core.widget.NestedScrollView>